@@ -157,6 +157,8 @@ wxString VerFromRev(const wxString &rev);
 
 wxString firstLineOnly(const wxString &str);
 
+bool pgAppMinimumVersion(const wxString &cmd, const int majorVer, const int minorVer);
+
 enum 
 {
     PGM_SERVER,
