@@ -35,6 +35,7 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2007-01-17 DP  1.6.3  Update to support the changed syntax of pg_dump 8.2+.
 2007-01-15 DP  1.6.3  Add support for Sun's compiler [Dhanaraj M]
 2007-01-12 DP  1.8.0  Use pg_stattuple (if available) to optionally display
                       additional table statistics on a per-table basis 
